added business type question and fixed styling

--- a/founder-client/src/pages/ApplicantQuestionForm/ApplicantQuestionForm.css
+++ b/founder-client/src/pages/ApplicantQuestionForm/ApplicantQuestionForm.css
@@ -3,5 +3,5 @@ section {
     margin: 30px auto;
     padding: 30px;
     border-radius: 10px;
-    background-color: #b19cd29f;
+    background-color: lightblue;
   }
