--- a/founder-client/src/components/ApplicantQuestion/ApplicantQuestion.css
+++ b/founder-client/src/components/ApplicantQuestion/ApplicantQuestion.css
@@ -1,14 +1,19 @@
 .question {
     display: flex;
     flex-direction: column;
-    width: 200px;
+    /* width: 200px; */
     padding-bottom: 20px;
   }
   
   .question span {
-    font-size: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 5px;
+    position: relative;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
   }
   
   .question input {
@@ -22,3 +27,10 @@
     border: none;
     border-radius: 5px;
   }
+
+  .question input.box {
+    transform : scale(2);
+    margin: 10px;
+
+  }
+
