--- a/founder-client/src/components/ApplicantQuestion/ApplicantQuestion.css
+++ b/founder-client/src/components/ApplicantQuestion/ApplicantQuestion.css
@@ -34,3 +34,17 @@
 
   }
 
+  .question button {
+    width: 350px;
+    height: 40px;
+    vertical-align: middle;
+
+    background: #D9D9D9;
+    border-radius: 64px;
+  }
+
+  .question .button-div {
+    display: flex;
+    justify-content: center;
+  }
+
