--- a/founder-client/src/pages/Pre-register/preregister.css
+++ b/founder-client/src/pages/Pre-register/preregister.css
@@ -1,12 +1,17 @@
+.background {
+
+    color: linear-gradient(pink, lightgreen);
+}
+
 .box {
 
 position: absolute;
 width: 477px;
 height: 539px;
-left: 482px;
-top: 184px;
+left: 250px;
+top: 175px;
 
-background: #FFFFFF;
+background: #F5EFEF;
 box-shadow: 0px 5px 10px 6px rgba(0, 0, 0, 0.1);
 border-radius: 7px;
 }
@@ -61,4 +66,7 @@ top: 634px;
 
 border: 1px solid #000000;
 }
+
+
+
 
