--- a/founder-client/src/pages/Profile/profile.css
+++ b/founder-client/src/pages/Profile/profile.css
@@ -5,7 +5,7 @@
     margin-left: 275px;
     top: 184px;
     text-align: center;
-    background: #FFFFFF;
+    background: #F5EFEF;
     box-shadow: 0px 5px 10px 6px rgba(0, 0, 0, 0.1);
     border-radius: 7px;
 }
