--- a/founder-client/src/pages/Pre-register/preregister.css
+++ b/founder-client/src/pages/Pre-register/preregister.css
@@ -21,7 +21,7 @@ width: 360px;
 height: 48px;
 left: 521px;
 top: 237px;
-margin-left: 35px;
+margin-left: 50px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 600;
@@ -42,7 +42,9 @@ font-style: normal;
 font-weight: 500;
 font-size: 20px;
 line-height: 24px;
-margin-left: 35px;
+margin-top: 10px;
+margin-left: 50px;
+
 color: #000000;
 }
 
@@ -54,7 +56,7 @@ color: #000000;
     left: 522px;
     top: 377px;
     font-size: 25px;
-    background: #D9D9D9;
+    background: #F5DBF2;
     border-radius: 64px;
 }
 .line {
