--- a/founder-client/src/util/util.css
+++ b/founder-client/src/util/util.css
@@ -40,18 +40,18 @@ color: #000000;
 }
 
 .needHelp {
+position: absolute;
 width: 99px;
 height: 22px;
-left: 610px;
-top: 973px;
+left: 740px;
+top: 95%;
 
 font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
-font-size: 18px;
+font-size: 15px;
 line-height: 22px;
 /* identical to box height */
-margin-left: 55px;
 text-align: center;
 
 color: #000000;
@@ -59,15 +59,16 @@ color: #000000;
 }
 
 .contactUs {
+position: absolute;
 width: 99px;
 height: 22px;
-left: 731px;
-top: 973px;
+left: 835px;
+top: 95%;
 
 font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
-font-size: 18px;
+font-size: 15px;
 line-height: 22px;
 /* identical to box height */
 
@@ -77,5 +78,7 @@ color: #000000;
 }
 
 .NeedHelpContactUs {
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    
 }
