--- a/founder-client/src/components/ProgressBarWrapper/ProgressBar/ProgressBar.css
+++ b/founder-client/src/components/ProgressBarWrapper/ProgressBar/ProgressBar.css
@@ -9,7 +9,7 @@
   top: 16.09px;
   left: 0;
   height: 6.41px;
-  width: 100%;
+  width: calc(100% - 10px);
   background: #d9d9d9;
   border-radius: 15px;
   z-index: 5;
@@ -25,7 +25,7 @@
   z-index: 10;
 }
 
-.markers-wrapper {
+#markers-wrapper {
   display: flex;
   justify-content: space-between;
   width: 100%;
