--- a/founder-client/src/components/ApplicantQuestion/RankingQuestion/Ranking.css
+++ b/founder-client/src/components/ApplicantQuestion/RankingQuestion/Ranking.css
@@ -48,3 +48,12 @@
     border-radius: 3px;
     margin-right: 5px;
   }
+
+.button-div {
+  width: 350px;
+  height: 40px;
+  vertical-align: middle;
+
+  background: #D9D9D9;
+  border-radius: 64px;
+}
