--- a/founder-client/src/components/ProgressBarWrapper/ProgressBar/ProgressBar.css
+++ b/founder-client/src/components/ProgressBarWrapper/ProgressBar/ProgressBar.css
@@ -7,10 +7,10 @@
 .bar-bg {
   position: absolute;
   top: 16.09px;
-  left: 0;
+  left: 5px;
   height: 6.41px;
-  width: calc(100% - 10px);
-  background: #d9d9d9;
+  width: calc(100% - 20px);
+  background: #ecedff;
   border-radius: 15px;
   z-index: 5;
 }
@@ -18,9 +18,9 @@
 .bar {
   position: absolute;
   top: 16.09px;
-  left: 0;
+  left: 5px;
   height: 6.41px;
-  background: #424b5a;
+  background: #3e2cc0;
   border-radius: 15px;
   z-index: 10;
 }
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #424b5a;
+  color: #3e2cc0;
 }
 
 .marker {
@@ -45,16 +45,16 @@
   width: 20px;
   height: 20px;
   padding: 10px;
-  background: #d9d9d9;
+  background: #c0bbe4;
   color: #fff;
   font-weight: 600;
   text-align: center;
 }
 
 .selected {
-  background: #424b5a;
+  background: #3e2cc0;
 }
 
 .completed {
-  background: #424b5a;
+  background: #3e2cc0;
 }
