--- a/founder-client/src/components/ApplicantQuestion/ApplicantQuestion.css
+++ b/founder-client/src/components/ApplicantQuestion/ApplicantQuestion.css
@@ -7,7 +7,6 @@
   
   .question span {
     position: relative;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -43,8 +42,12 @@
     border-radius: 64px;
   }
 
-  .question .button-div {
-    display: flex;
-    justify-content: center;
+  .button-div {
+    width: 200px;
+    height: 40px;
+    vertical-align: middle;
+
+    background: #D9D9D9;
+    border-radius: 64px;
   }
 
