--- a/founder-client/src/components/ApplicantQuestion/RankingQuestion/Ranking.css
+++ b/founder-client/src/components/ApplicantQuestion/RankingQuestion/Ranking.css
@@ -1,5 +1,5 @@
 .Ranking-Question {
-    position: absolute;
+    position: relative;
     left: 0%;
     right: 0%;
     top: 0%;
@@ -8,7 +8,7 @@
     font-family: "Inter";
     font-style: normal;
     font-weight: 200;
-    font-size: 32px;
+    font-size: 16px;
     line-height: 39px;
   }
   
@@ -23,7 +23,7 @@
   
   .answerText {
     font-family: "Inter";
-    font-size: 24px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
